labs/Week 5 - DevOps, CI-CD and OpenShift/module-42/lab42/starter/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-api
  labels:
    app: crm-api
spec:
  type: ClusterIP
  selector:
    app: crm-api
  ports:
    - name: http
      port: 80
      # TODO(lab42): Align targetPort with container port name/number
      targetPort: http
